samples/_failures_safe/1761729573_2987f1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_324d15a9.c: In function ‘main’:
./samples/SAFE/__tmp_324d15a9.c:152:18: error: expected ‘)’ at end of input
  152 |         if (u < 0
      |            ~     ^
      |                  )
./samples/SAFE/__tmp_324d15a9.c:152:9: error: expected declaration or statement at end of input
  152 |         if (u < 0
      |         ^~
./samples/SAFE/__tmp_324d15a9.c:152:9: error: expected declaration or statement at end of input
